[package]
name = "concurrency"
version = "0.1.0"
edition = "2021"
authors = ["Xiaobin Li <l_xb@foxmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
dashmap = "5"
oneshot = "0.1"
rand = "0.8"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
